Terminacion de la pestaña de administración de eventos, para eventos generales y especiales como pueden ser las entrevistas o defensas de protocolo, agreagción de una pestaña para todos de eventos generales, agregación de la pestaña de entrevistas en la que salga la entrevista

--- a/app/templates/admin/review/submissions_list.html
+++ b/app/templates/admin/review/submissions_list.html
@@ -191,6 +191,10 @@
   </div>
 </div>
 
+
+{% endblock %}
+
+{% block modals %}
 <!-- Modal para revisar prórroga -->
 <div class="modal fade" id="extensionReviewModal" tabindex="-1">
   <div class="modal-dialog modal-lg">
