--- a/app/templates/coordinator/dashboard.html
+++ b/app/templates/coordinator/dashboard.html
@@ -202,6 +202,9 @@
   </div>
 </div>
 
+{% endblock %}
+
+{% block modals %}
 <!-- Modal para subir documento por estudiante -->
 <div class="modal fade" id="uploadForStudentModal" tabindex="-1" aria-labelledby="uploadForStudentLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg">
