--- a/app/templates/programs/admission/_archive_table.html
+++ b/app/templates/programs/admission/_archive_table.html
@@ -1,6 +1,7 @@
 <div class="table-responsive">
   {% if step.name == 'Entrevista' or step.name == 'Defensa de Protocolo/Propuesta' %}
-
+  <div class="interview-info">
+  </div>
   {%else%}
   <table class="table table-hover align-middle" id="archiveTable">
     <thead class="table-light">
